--- a/styles/layout/_wrapper.scss
+++ b/styles/layout/_wrapper.scss
@@ -22,7 +22,11 @@
 			@include inner;
 		}
 
-		@include breakpoint('<=small') {
+		> * > * {
+			@include inner;
+		}
+
+		@include breakpoint(small) {
 			padding-top: 2.75em;
 		}
 	}
