--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -83,7 +83,7 @@
 					padding-right: 1.5em;
 				}
 
-				&[href="#menu"] {
+				&.menu-link {
 					padding-right: 3.325em !important;
 
 					&:before, &:after {
@@ -145,16 +145,16 @@
 			&.style6 { .logo { strong { color: _palette(accent6); } } }
 		}
 
-		body.is-preload & {
+		.body.is-loading & {
 			&.alt {
 				opacity: 0;
 			}
 		}
 
-		@include breakpoint('<=xlarge') {
+		@include breakpoint(xlarge) {
 			nav {
 				a {
-					&[href="#menu"] {
+					&.menu-link {
 						padding-right: 3.75em !important;
 
 						&:last-child {
@@ -165,10 +165,10 @@
 			}
 		}
 
-		@include breakpoint('<=large') {
+		@include breakpoint(large) {
 			nav {
 				a {
-					&[href="#menu"] {
+					&.menu-link {
 						padding-right: 4em !important;
 
 						&:last-child {
@@ -179,7 +179,7 @@
 			}
 		}
 
-		@include breakpoint('<=small') {
+		@include breakpoint(small) {
 			height: 2.75em;
 			line-height: 2.75em;
 
@@ -195,7 +195,7 @@
 						padding-right: 1em;
 					}
 
-					&[href="#menu"] {
+					&.menu-link {
 						padding-right: 3.25em !important;
 
 						&:before, &:after {
@@ -214,7 +214,7 @@
 			}
 		}
 
-		@include breakpoint('<=xsmall') {
+		@include breakpoint(xsmall) {
 			.logo {
 				span {
 					display: none;
@@ -223,7 +223,7 @@
 
 			nav {
 				a {
-					&[href="#menu"] {
+					&.menu-link {
 						overflow: hidden;
 						padding-right: 0 !important;
 						text-indent: 5em;
